2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-25  Christophe Fergeau <teuf@users.sourceforge.net>

	* capplets/default-applications/gnome-default-applications-properties-structs.c
	* capplets/default-applications/gnome-default-applications-properties.c
	* capplets/default-applications/gnome-default-applications-properties.glade
	Added a tab to choose the preferred mailer, added epiphany to the list
	known browsers, don't select any checkbox there is no default browser
	or mailer	

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-02-18  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-default-application-properties.c: Fix a double free poop
	that I made while fixing leaks. Spotted by jrb.
	
Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 Satyajit Kanungo <satyajit.kanungo@wipro.com> 
	* Changed the App name passed to  gnome_program_init().
	  There was a small type in the name. Fixes bug #104060

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-19  Ross Burton  <ross@burtonini.com>

	* default-applications.desktop.in: Fix the desktop file so that it
	validates.

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-05-24  Satyajit Kanungo <satyajit.kanungo@wipro.com>

        * gnome-default-applications-properties.c : Changed the help file