@@ -1,3 +1,11 @@
+2003-07-14  Christophe Fergeau  <teuf@gnome.org>
+
+	* gnome-default-applications-properties-structs.c: added a few more 
+	  mailers
+	* gnome-default-applications-properties.c:
+	(initialize_default_applications): only display Evolution once when
+	  both evo<=1.2 and evo>=1.4 are installed
+
 2003-07-07  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.3.4
